Update pkmn suggestions

--- a/type-table.html
+++ b/type-table.html
@@ -39,16 +39,16 @@
 		</script>
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-48355200.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-51a2cbb4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-e8635bab.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-cd2832f5.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-e9ec2b8e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ed3881b0.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-8b34304a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-3bd130f7.js">
+		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-7251519e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-61c90870.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1120b2fa.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-4c2d52e3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d0087e11.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-aacb2486.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-77b05b3b.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-1v6qfvu_START --><!-- HEAD_svelte-1v6qfvu_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-1v6qfvu_START --><!-- HEAD_svelte-1v6qfvu_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -159,13 +159,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1466lgj">
-			import { start } from "./_app/immutable/start-51a2cbb4.js";
+			import { start } from "./_app/immutable/start-7251519e.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1466lgj"]').parentNode,
-				version: "1672686920828",
+				version: "1672840909999",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
@@ -175,5 +175,14 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
+		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<script>
+			kofiWidgetOverlay.draw('terastal', {
+				'type': 'floating-chat',
+				'floating-chat.donateButton.text': 'Support Me',
+				'floating-chat.donateButton.background-color': '#fcbf47',
+				'floating-chat.donateButton.text-color': '#323842'
+			});
+		</script>
 	</body>
 </html>
