--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 		</script>
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-48355200.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-3c93ec44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-51a2cbb4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-e8635bab.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-cd2832f5.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-e9ec2b8e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-ed3881b0.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-1fbb36b2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-deb87035.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-3bd130f7.js">
+		<link rel="modulepreload" href="./_app/immutable/start-7251519e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-61c90870.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1120b2fa.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-4c2d52e3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d0087e11.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-ea7c3ba4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-74f9f916.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-77b05b3b.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal - Pokémon Tera Raid Type Counter Calculator</title><!-- HEAD_svelte-wuca84_START --><!-- HEAD_svelte-wuca84_END -->
 	</head>
@@ -75,7 +75,7 @@
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 									<form class="pokemon-search-form svelte-1xiyio"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button></div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-336 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-170 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -111,32 +111,18 @@
 										<div class="raid-card__tera-type svelte-1xiyio"><button type="button" class="type type__tera-symbol" title="Normal" data-selected="false" data-type="Normal"></button><button type="button" class="type type__tera-symbol" title="Fire" data-selected="false" data-type="Fire"></button><button type="button" class="type type__tera-symbol" title="Water" data-selected="false" data-type="Water"></button><button type="button" class="type type__tera-symbol" title="Electric" data-selected="false" data-type="Electric"></button><button type="button" class="type type__tera-symbol" title="Grass" data-selected="false" data-type="Grass"></button><button type="button" class="type type__tera-symbol" title="Ice" data-selected="false" data-type="Ice"></button><button type="button" class="type type__tera-symbol" title="Fighting" data-selected="false" data-type="Fighting"></button><button type="button" class="type type__tera-symbol" title="Poison" data-selected="false" data-type="Poison"></button><button type="button" class="type type__tera-symbol" title="Ground" data-selected="false" data-type="Ground"></button><button type="button" class="type type__tera-symbol" title="Flying" data-selected="false" data-type="Flying"></button><button type="button" class="type type__tera-symbol" title="Psychic" data-selected="false" data-type="Psychic"></button><button type="button" class="type type__tera-symbol" title="Bug" data-selected="false" data-type="Bug"></button><button type="button" class="type type__tera-symbol" title="Rock" data-selected="false" data-type="Rock"></button><button type="button" class="type type__tera-symbol" title="Ghost" data-selected="false" data-type="Ghost"></button><button type="button" class="type type__tera-symbol" title="Dragon" data-selected="false" data-type="Dragon"></button><button type="button" class="type type__tera-symbol" title="Dark" data-selected="false" data-type="Dark"></button><button type="button" class="type type__tera-symbol" title="Steel" data-selected="false" data-type="Steel"></button><button type="button" class="type type__tera-symbol" title="Fairy" data-selected="false" data-type="Fairy"></button></div></div>
 									</div>
 								<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-center align-items-center">
-									<div class="raid-card__pokemon svelte-1xiyio"><p class="error" style="position: absolute; top: 48%;">No Pokémon selected
-											</p></div></div></div>
+									<div class="raid-card__pokemon svelte-1xiyio"><p class="error" style="position: absolute; top: 48%;"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></p></div></div></div>
 							<div class="raid-card-background-1"></div></div></div></div></div>
 
 			
 			<div class="row px-0 "><div class="col-12 col-lg-5"><div class="row"><h4 class="jumbotron-heading">Tera Attacks</h4>
-						<table class="table table-sm table-bordered"><tbody><tr><th>Possible Attacks <br></th>
+						<table class="table table-sm table-bordered"><tbody><tr><th>Possible Attacks</th>
 										<th>Power</th>
 										<th>Category</th></tr>
-									<tr><td colspan="3" class="error">No Pokémon selected</td></tr></tbody></table></div>
+									<tr><td colspan="3" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></tr></tbody></table></div>
 					<div class="row"><h4 class="jumbotron-heading">Best Counter Pokémon (Beta)</h4>
 							
-							<table class="table table-bordered table-sm table-striped"><thead><tr><td colspan="9"><button class="btn btn-lg btn-primary" style="text-align: center">Calculate Best Counter Pokemon (Beta)
-											</button></td></tr>
-									<tr><th colspan="2"><small>Pokémon</small></th>
-										<th><small>Types</small></th>
-										<th><small>Resis.<br>/Immun.<br>/Weaknss.</small></th>
-										<th><small>DEF</small></th>
-										<th><small>SP.DEF</small></th>
-										<th><small class="d-xl-block d-xxl-none">COUNTR</small>
-											<span class="d-none d-xxl-block">Counter</span></th>
-										<th><small class="d-xl-block d-xxl-none">PTS</small>
-											<span class="d-none d-xxl-block">Points</span></th>
-										<th><small class="d-xl-block d-xxl-none">RSLT</small>
-											<span class="d-none d-xxl-block">Result</span></th></tr>
-									</thead>
+							<table class="table table-bordered table-sm table-striped"><thead><td colspan="9" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></thead>
 								<tbody></tbody></table></div></div>
 
 				<div class="col-12 col-lg-7"><div class="row"><h4 class="jumbotron-heading">Best Counter Types</h4>
@@ -153,7 +139,7 @@
 										<span class="d-none d-sm-block d-lg-block ">Total</span></th>
 									<th><small class="d-block d-sm-none">RSLT</small>
 										<span class="d-none d-sm-block d-lg-block ">Result</span></th></tr></thead>
-							<tbody><tr><td colspan="7" class="error">No Pokémon selected.</td></tr></tbody></table></div></div></div></div></div></div>
+							<tbody><tr><td colspan="7" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></tr></tbody></table></div></div></div></div></div></div>
 
 </main>
 
@@ -163,14 +149,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="2gj78c">
-			import { start } from "./_app/immutable/start-51a2cbb4.js";
+		<script type="module" data-sveltekit-hydrate="27vqzv">
+			import { start } from "./_app/immutable/start-7251519e.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="2gj78c"]').parentNode,
-				version: "1672686920828",
+				target: document.querySelector('[data-sveltekit-hydrate="27vqzv"]').parentNode,
+				version: "1672840909999",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -180,5 +166,14 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
+		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<script>
+			kofiWidgetOverlay.draw('terastal', {
+				'type': 'floating-chat',
+				'floating-chat.donateButton.text': 'Support Me',
+				'floating-chat.donateButton.background-color': '#fcbf47',
+				'floating-chat.donateButton.text-color': '#323842'
+			});
+		</script>
 	</body>
 </html>
