--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -37,18 +37,19 @@
 			gtag('js', new Date());
 			gtag('config', 'G-8L9PXM6PDZ');
 		</script>
+		<!-- Bootstrap -->
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-7251519e.js">
+		<link rel="modulepreload" href="./_app/immutable/start-f8227549.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-61c90870.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1120b2fa.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-4c2d52e3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d0087e11.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-9fb974f4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-74f9f916.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-ed59f4b9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-1a20da67.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-77b05b3b.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal - Pokémon Tera Type Counter Calculator</title><!-- HEAD_svelte-1e2bt7k_START --><!-- HEAD_svelte-1e2bt7k_END -->
@@ -83,7 +84,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-40 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-477 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -108,7 +109,7 @@
           </div>
 
       
-        <div class="autocomplete-list-item-no-results svelte-75ckfb">...393
+        <div class="autocomplete-list-item-no-results svelte-75ckfb">...399
               items not shown</div>
       </div></div>
 
@@ -140,14 +141,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="11gyjqv">
-			import { start } from "./_app/immutable/start-7251519e.js";
+		<script type="module" data-sveltekit-hydrate="wesm7h">
+			import { start } from "./_app/immutable/start-f8227549.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="11gyjqv"]').parentNode,
-				version: "1672840909999",
+				target: document.querySelector('[data-sveltekit-hydrate="wesm7h"]').parentNode,
+				version: "1672857575264",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
