--- a/type-table.html
+++ b/type-table.html
@@ -37,10 +37,11 @@
 			gtag('js', new Date());
 			gtag('config', 'G-8L9PXM6PDZ');
 		</script>
+		<!-- Bootstrap -->
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-7251519e.js">
+		<link rel="modulepreload" href="./_app/immutable/start-f8227549.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-61c90870.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-1120b2fa.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-4c2d52e3.js">
@@ -48,7 +49,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-aacb2486.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-77b05b3b.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-1v6qfvu_START --><!-- HEAD_svelte-1v6qfvu_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-1v6qfvu_START --><!-- HEAD_svelte-1v6qfvu_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -159,13 +160,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1466lgj">
-			import { start } from "./_app/immutable/start-7251519e.js";
+			import { start } from "./_app/immutable/start-f8227549.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1466lgj"]').parentNode,
-				version: "1672840909999",
+				version: "1672857575264",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
