--- a/type-table.html
+++ b/type-table.html
@@ -11,7 +11,9 @@
 		/>
 		<meta
 			name="keywords"
-			content="Pokemon, Scarlet, Violet, Terastal, Tera, Tara-Raid, Terastallizing, Terastal phenomenon, Terakristallisierung, VGC, Battle,
+			content="Pokemon, Scarlet, Violet, Terastal, Tera, Calculator, Type, Tera type calculator, Tara-Raid, Raids, Drop, Item Drops, Drop Rate, 
+			Terastallizing, Terastal phenomenon, Herba Mystica, Spicy Herba Mystica, Sweet Herba Mystica, Salty Herba Mystica, Bitter Herba Mystica, Sour Herba Mystica,
+			Terakristallisierung, VGC, Battle,
 			 Competitive, Counter,Baxcalibur, Skeledirge, Quaquaval, Meowscarada, Flutter Mane, Slither Wing, Roaring Moon, Iron Treads, Iron Moth, Iron Hands, Iron Jugulis,
 			 Iron Thorns, Iron Bundle, Iron Valiant, Ting-Lu, Chien-Pao, Wo-Chien, Chi-Yu, Koraidon, Miraidon, Tinkaton, Charcadet, Armarouge, Ceruledge, Toedscool, Toedscruel,
 			 Kingambit, Clodsire, Annihilape, Baxcalibur Counter, Skeledirge Counter, Quaquaval Counter, Meowscarada Counter, Flutter Mane Counter, Slither Wing Counter,
@@ -31,16 +33,16 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-4d77d7bf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-5dcb2f76.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c48bcc76.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0bbef310.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-eb888511.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-6c84ceee.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/GA-4ed75e98.js">
+		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-46ff0688.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-39016b64.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-77b07260.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-cwnwos_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal - Pokémon Type Table</title><!-- HEAD_svelte-cwnwos_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -156,13 +158,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1cfrdd5">
-			import { start } from "./_app/immutable/start-4d77d7bf.js";
+			import { start } from "./_app/immutable/start-46ff0688.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1cfrdd5"]').parentNode,
-				version: "1672999942739",
+				version: "1673201455513",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
