--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -11,7 +11,9 @@
 		/>
 		<meta
 			name="keywords"
-			content="Pokemon, Scarlet, Violet, Terastal, Tera, Tara-Raid, Terastallizing, Terastal phenomenon, Terakristallisierung, VGC, Battle,
+			content="Pokemon, Scarlet, Violet, Terastal, Tera, Calculator, Type, Tera type calculator, Tara-Raid, Raids, Drop, Item Drops, Drop Rate, 
+			Terastallizing, Terastal phenomenon, Herba Mystica, Spicy Herba Mystica, Sweet Herba Mystica, Salty Herba Mystica, Bitter Herba Mystica, Sour Herba Mystica,
+			Terakristallisierung, VGC, Battle,
 			 Competitive, Counter,Baxcalibur, Skeledirge, Quaquaval, Meowscarada, Flutter Mane, Slither Wing, Roaring Moon, Iron Treads, Iron Moth, Iron Hands, Iron Jugulis,
 			 Iron Thorns, Iron Bundle, Iron Valiant, Ting-Lu, Chien-Pao, Wo-Chien, Chi-Yu, Koraidon, Miraidon, Tinkaton, Charcadet, Armarouge, Ceruledge, Toedscool, Toedscruel,
 			 Kingambit, Clodsire, Annihilape, Baxcalibur Counter, Skeledirge Counter, Quaquaval Counter, Meowscarada Counter, Flutter Mane Counter, Slither Wing Counter,
@@ -31,19 +33,19 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-ed8ccbf1.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-4d77d7bf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-5dcb2f76.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c48bcc76.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-0bbef310.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-eb888511.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-a1315e4f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/GA-4ed75e98.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-2986611f.js">
+		<link rel="modulepreload" href="./_app/immutable/start-46ff0688.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-39016b64.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-86b8e908.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-9cd1ad4a.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal - Pokémon Tera Type Counter Calculator</title><!-- HEAD_svelte-jqqbxm_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal - Pokémon Tera Type Counter Calculator</title><!-- HEAD_svelte-jqqbxm_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -80,7 +82,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-680 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-716 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -105,7 +107,7 @@
           </div>
 
       
-        <div class="autocomplete-list-item-no-results svelte-75ckfb">...412
+        <div class="autocomplete-list-item-no-results svelte-75ckfb">...415
               items not shown</div>
       </div></div>
 
@@ -137,14 +139,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1iivmbt">
-			import { start } from "./_app/immutable/start-4d77d7bf.js";
+		<script type="module" data-sveltekit-hydrate="ozzr6o">
+			import { start } from "./_app/immutable/start-46ff0688.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1iivmbt"]').parentNode,
-				version: "1672999942739",
+				target: document.querySelector('[data-sveltekit-hydrate="ozzr6o"]').parentNode,
+				version: "1673201455513",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
