fix pokemon suggestions when changing tera type

--- a/type-table.html
+++ b/type-table.html
@@ -34,10 +34,10 @@
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-46ff0688.js">
+		<link rel="modulepreload" href="./_app/immutable/start-29ad9d49.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-39016b64.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-77b07260.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
@@ -151,20 +151,21 @@
 							<td>Fairy</td>
 						</tr></tbody></table></div></div></div></main>
 
-	<footer class="svelte-1040u2c"><div class="container"><span>This website is not affiliated with, sponsored or endorsed by, or in any way associated
+	<footer class="svelte-1040u2c"><div class="container"><p>Found a bug? Report it to: <a target="_blank" rel="noreferrer" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></p>
+			<span>This website is not affiliated with, sponsored or endorsed by, or in any way associated
 				with Pokémon or The Pokémon Company International Inc. Pokémon and all respective names are
 				Trademark &amp; © of Nintendo 1996-2023</span></div></footer>
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1cfrdd5">
-			import { start } from "./_app/immutable/start-46ff0688.js";
+		<script type="module" data-sveltekit-hydrate="ug3zbt">
+			import { start } from "./_app/immutable/start-29ad9d49.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1cfrdd5"]').parentNode,
-				version: "1673201455513",
+				target: document.querySelector('[data-sveltekit-hydrate="ug3zbt"]').parentNode,
+				version: "1673281254560",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
