--- a/type-table.html
+++ b/type-table.html
@@ -3,11 +3,11 @@
 	<head>
 		<link rel="icon" href="./logo-32.min.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Terastal - Pokémon Terastallizing Calculator</title>
+		<title>Terastal - Best Pokemon for Tera Raids</title>
 		<meta name="title" content="Tera Type Calculator - Pokemon Scarlet & Violet" />
 		<meta
 			name="description"
-			content="Best Pokemon for Tera Raid  - For Raids or VGC Online Battles. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
+			content="Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
 		/>
 		<meta
 			name="keywords"
@@ -168,7 +168,7 @@
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="ug3zbt"]').parentNode,
-				version: "1673616763503",
+				version: "1673617085963",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
