--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -7,21 +7,24 @@
 		<meta name="title" content="Tera Type Calculator - Pokemon Scarlet & Violet" />
 		<meta
 			name="description"
-			content="Calculate the best Pokemon Tera Type counter - For Raids or VGC Online Battles. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
+			content="Best Pokemon for Tera Raid  - For Raids or VGC Online Battles. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
 		/>
 		<meta
 			name="keywords"
-			content="Pokemon, Scarlet, Violet, Terastal, Tera, Calculator, Type, Tera type calculator, Tara-Raid, Raids, Drop, Item Drops, Drop Rate, 
-			Terastallizing, Terastal phenomenon, Herba Mystica, Spicy Herba Mystica, Sweet Herba Mystica, Salty Herba Mystica, Bitter Herba Mystica, Sour Herba Mystica,
-			Terakristallisierung, VGC, Battle,
-			 Competitive, Counter,Baxcalibur, Skeledirge, Quaquaval, Meowscarada, Flutter Mane, Slither Wing, Roaring Moon, Iron Treads, Iron Moth, Iron Hands, Iron Jugulis,
-			 Iron Thorns, Iron Bundle, Iron Valiant, Ting-Lu, Chien-Pao, Wo-Chien, Chi-Yu, Koraidon, Miraidon, Tinkaton, Charcadet, Armarouge, Ceruledge, Toedscool, Toedscruel,
-			 Kingambit, Clodsire, Annihilape, Baxcalibur Counter, Skeledirge Counter, Quaquaval Counter, Meowscarada Counter, Flutter Mane Counter, Slither Wing Counter,
-			 Roaring Moon Counter, Iron Treads Counter, Iron Moth Counter, Iron Hands Counter, Iron Jugulis Counter, Iron Thorns Counter, Iron Bundle Counter, Iron Valiant Counter,
-			 Ting-Lu Counter, Chien-Pao Counter, Wo-Chien Counter, Chi-Yu Counter, Koraidon Counter, Miraidon Counter, Tinkaton Counter, Charcadet Counter, Armarouge Counter, Ceruledge Counter,
-			 Toedscool Counter, Toedscruel Counter, Kingambit Counter, Clodsire Counter, Annihilape Counter, Paradox, Icons, Symbols, New type icons, new type symbols, tera raid, tera raids,
+			content="Best Pokemon for Tera Raid, Tera Raid, Raid Events, Fairy, Ghost, Weakness, Counter,
+				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
+				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
+				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
+				Blissey,Mimikyu,Talonflame,Baxcalibur,Garganacl,Salamence,Hippowdon,Cetitan,Pincurchin,Espeon,
+				Tauros,Scizor,Glimmora,Orthworm,Magnezone,Sylveon,Farigiraf,
+				Electric, Grass, Ground, Fire, Ice, Water, Rock, Normal, Flying, Bug, Ghost, Fighting,
+			 Dragon, Psychic, Fairy, Steel, Poison, Dark
+				Scarlet, Violet, Terastal, Tera, Calculator, Type, Tera type calculator, Tara-Raid, Raids, Drop, Item Drops, Drop Rate, 
+				Terastallizing, Terastal phenomenon, Herba Mystica, Spicy Herba Mystica, Sweet Herba Mystica, Salty Herba Mystica, Bitter Herba Mystica, Sour Herba Mystica,
+				Terakristallisierung, VGC, Battle,
+			 New type icons, new type symbols, tera raid, tera raids,
 			 tera type icons, tera type symbols, tera type icon finder, terra, pokemon tera type icons, Pokemon Scarlet, Pokemon Violet, Karmesin, Purpur, good pokemon, tera type guide, Electric, Grass, Ground, Fire, Ice, Water, Rock, Normal, Flying, Bug, Ghost, Fighting,
-			 Dragon, Psychic, Fairy, Steel, Poison, Dark, Cinderace"
+			 Dragon, Psychic, Fairy, Steel, Poison, Dark"
 		/>
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -36,12 +39,12 @@
 		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-c45530ec.js">
+		<link rel="modulepreload" href="./_app/immutable/start-37f3d700.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-86b8e908.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-d969c26b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-9cd1ad4a.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
@@ -82,7 +85,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-503 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-922 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -140,14 +143,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="4vo8xi">
-			import { start } from "./_app/immutable/start-c45530ec.js";
+		<script type="module" data-sveltekit-hydrate="1m86u55">
+			import { start } from "./_app/immutable/start-37f3d700.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="4vo8xi"]').parentNode,
-				version: "1673463465654",
+				target: document.querySelector('[data-sveltekit-hydrate="1m86u55"]').parentNode,
+				version: "1673616763503",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
