--- a/type-table.html
+++ b/type-table.html
@@ -26,6 +26,12 @@
 			 tera type icons, tera type symbols, tera type icon finder, terra, pokemon tera type icons, Pokemon Scarlet, Pokemon Violet, Karmesin, Purpur, good pokemon, tera type guide, Electric, Grass, Ground, Fire, Ice, Water, Rock, Normal, Flying, Bug, Ghost, Fighting,
 			 Dragon, Psychic, Fairy, Steel, Poison, Dark"
 		/>
+		<meta property="og:title" content="Pokémon Raid Counter Calculator">
+		<meta property="og:site_name" content="Terastal - Pokémon Raid Counter Calculator">
+		<meta property="og:url" content="https://terastal.net">
+		<meta property="og:description" content="Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator.">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="/assets/preview.webp">
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta charset="UTF-8" />
@@ -36,8 +42,8 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-b9901583.js">
+		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-223ca8bd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
@@ -45,7 +51,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-acf8aece.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Pokémon Tera Type Table - Terastal.net</title><!-- HEAD_svelte-1hndsnr_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Pokémon Tera Type Table - Terastal.net</title><!-- HEAD_svelte-1hndsnr_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -162,13 +168,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="ug3zbt">
-			import { start } from "./_app/immutable/start-b9901583.js";
+			import { start } from "./_app/immutable/start-223ca8bd.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="ug3zbt"]').parentNode,
-				version: "1673617401220",
+				version: "1673803023300",
 				hydrate: {
 					node_ids: [0, 4],
 					data: [null,null],
