--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 			 tera type icons, tera type symbols, tera type icon finder, terra, pokemon tera type icons, Pokemon Scarlet, Pokemon Violet, Karmesin, Purpur, good pokemon, tera type guide, Electric, Grass, Ground, Fire, Ice, Water, Rock, Normal, Flying, Bug, Ghost, Fighting,
 			 Dragon, Psychic, Fairy, Steel, Poison, Dark"
 		/>
+		<meta property="og:title" content="Pokémon Raid Counter Calculator">
+		<meta property="og:site_name" content="Terastal - Pokémon Raid Counter Calculator">
+		<meta property="og:url" content="https://terastal.net">
+		<meta property="og:description" content="Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator.">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="/assets/preview.webp">
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta charset="UTF-8" />
@@ -36,19 +42,19 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-2d557a0e.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page-19ae1971.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-b9901583.js">
+		<link rel="modulepreload" href="./_app/immutable/start-223ca8bd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-05fe11bc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-9cd1ad4a.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-5864b890.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-a25972e1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Best Pokemon for Tera Raids - Tera Raid Counter Calculator - Terastal.net</title><!-- HEAD_svelte-1hfgv1q_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Best Pokemon for Tera Raids - Tera Raid Counter Calculator - Terastal.net</title><!-- HEAD_svelte-1hfgv1q_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -77,9 +83,9 @@
 <div class="container py-3 raid-counter"><div class="row px-0"><div class="col-12"><h2 class="jumbotron-heading">Tera Raid Counter</h2>
 			<p class="lead">Find the best Counter for a Tera Raid.</p>
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-									<form class="pokemon-search-form svelte-8of23o"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
+									<form class="pokemon-search-form svelte-cvz6t5"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button></div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-912 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-428 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -125,6 +131,10 @@
 														<span class="label"><!-- HTML_TAG_START -->Arcanine<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Fire"></div>
 														<div class="type type__symbol-autocomplete"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/997.min.png');"></div>
+														<span class="label"><!-- HTML_TAG_START -->Arctibax<!-- HTML_TAG_END --></span>
+														<div class="type type__symbol-autocomplete" data-type="Dragon"></div>
+														<div class="type type__symbol-autocomplete" data-type="Ice"></div></div>
           </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/936.min.png');"></div>
 														<span class="label"><!-- HTML_TAG_START -->Armarouge<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Fire"></div>
@@ -229,6 +239,10 @@
 														<span class="label"><!-- HTML_TAG_START -->Bronzor<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Psychic"></div>
 														<div class="type type__symbol-autocomplete" data-type="Steel"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/986.min.png');"></div>
+														<span class="label"><!-- HTML_TAG_START -->Brute Bonnet<!-- HTML_TAG_END --></span>
+														<div class="type type__symbol-autocomplete" data-type="Dark"></div>
+														<div class="type type__symbol-autocomplete" data-type="Grass"></div></div>
           </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/779.min.png');"></div>
 														<span class="label"><!-- HTML_TAG_START -->Bruxish<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Psychic"></div>
@@ -237,23 +251,15 @@
 														<span class="label"><!-- HTML_TAG_START -->Buizel<!-- HTML_TAG_END --></span>
 														<div class="type type__symbol-autocomplete" data-type="Water"></div>
 														<div class="type type__symbol-autocomplete"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/331.min.png');"></div>
-														<span class="label"><!-- HTML_TAG_START -->Cacnea<!-- HTML_TAG_END --></span>
-														<div class="type type__symbol-autocomplete" data-type="Grass"></div>
-														<div class="type type__symbol-autocomplete"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/332.min.png');"></div>
-														<span class="label"><!-- HTML_TAG_START -->Cacturne<!-- HTML_TAG_END --></span>
-														<div class="type type__symbol-autocomplete" data-type="Dark"></div>
-														<div class="type type__symbol-autocomplete" data-type="Grass"></div></div>
           </div>
 
-      <div slot="dropdown-footer" class="autocomplete-list-item-no-results svelte-75ckfb">...323 Pokémons not shown.<br>Please use the text search or the type filter above to see more Pokémon.<br>Found a bug? Report it to: <a target="_blank" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></div></div></div>
+      <div slot="dropdown-footer" class="autocomplete-list-item-no-results svelte-75ckfb">...379 Pokémons not shown.<br>Please use the text search or the type filter above to see more Pokémon.<br>Found a bug? Report it to: <a target="_blank" rel="noreferrer" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></div></div></div>
 
 </div></div></form>
 									
 									<div class="row">
 										<p>Select the Tera Type:</p>
-										<div class="raid-card__tera-type svelte-8of23o"><button type="button" class="type type__tera-symbol" title="Normal" disabled data-selected="false" data-type="Normal"></button><button type="button" class="type type__tera-symbol" title="Fire" disabled data-selected="false" data-type="Fire"></button><button type="button" class="type type__tera-symbol" title="Water" disabled data-selected="false" data-type="Water"></button><button type="button" class="type type__tera-symbol" title="Electric" disabled data-selected="false" data-type="Electric"></button><button type="button" class="type type__tera-symbol" title="Grass" disabled data-selected="false" data-type="Grass"></button><button type="button" class="type type__tera-symbol" title="Ice" disabled data-selected="false" data-type="Ice"></button><button type="button" class="type type__tera-symbol" title="Fighting" disabled data-selected="false" data-type="Fighting"></button><button type="button" class="type type__tera-symbol" title="Poison" disabled data-selected="false" data-type="Poison"></button><button type="button" class="type type__tera-symbol" title="Ground" disabled data-selected="false" data-type="Ground"></button><button type="button" class="type type__tera-symbol" title="Flying" disabled data-selected="false" data-type="Flying"></button><button type="button" class="type type__tera-symbol" title="Psychic" disabled data-selected="false" data-type="Psychic"></button><button type="button" class="type type__tera-symbol" title="Bug" disabled data-selected="false" data-type="Bug"></button><button type="button" class="type type__tera-symbol" title="Rock" disabled data-selected="false" data-type="Rock"></button><button type="button" class="type type__tera-symbol" title="Ghost" disabled data-selected="false" data-type="Ghost"></button><button type="button" class="type type__tera-symbol" title="Dragon" disabled data-selected="false" data-type="Dragon"></button><button type="button" class="type type__tera-symbol" title="Dark" disabled data-selected="false" data-type="Dark"></button><button type="button" class="type type__tera-symbol" title="Steel" disabled data-selected="false" data-type="Steel"></button><button type="button" class="type type__tera-symbol" title="Fairy" disabled data-selected="false" data-type="Fairy"></button></div></div>
+										<div class="raid-card__tera-type svelte-cvz6t5"><button type="button" class="type type__tera-symbol" title="Normal" disabled data-selected="false" data-type="Normal"></button><button type="button" class="type type__tera-symbol" title="Fire" disabled data-selected="false" data-type="Fire"></button><button type="button" class="type type__tera-symbol" title="Water" disabled data-selected="false" data-type="Water"></button><button type="button" class="type type__tera-symbol" title="Electric" disabled data-selected="false" data-type="Electric"></button><button type="button" class="type type__tera-symbol" title="Grass" disabled data-selected="false" data-type="Grass"></button><button type="button" class="type type__tera-symbol" title="Ice" disabled data-selected="false" data-type="Ice"></button><button type="button" class="type type__tera-symbol" title="Fighting" disabled data-selected="false" data-type="Fighting"></button><button type="button" class="type type__tera-symbol" title="Poison" disabled data-selected="false" data-type="Poison"></button><button type="button" class="type type__tera-symbol" title="Ground" disabled data-selected="false" data-type="Ground"></button><button type="button" class="type type__tera-symbol" title="Flying" disabled data-selected="false" data-type="Flying"></button><button type="button" class="type type__tera-symbol" title="Psychic" disabled data-selected="false" data-type="Psychic"></button><button type="button" class="type type__tera-symbol" title="Bug" disabled data-selected="false" data-type="Bug"></button><button type="button" class="type type__tera-symbol" title="Rock" disabled data-selected="false" data-type="Rock"></button><button type="button" class="type type__tera-symbol" title="Ghost" disabled data-selected="false" data-type="Ghost"></button><button type="button" class="type type__tera-symbol" title="Dragon" disabled data-selected="false" data-type="Dragon"></button><button type="button" class="type type__tera-symbol" title="Dark" disabled data-selected="false" data-type="Dark"></button><button type="button" class="type type__tera-symbol" title="Steel" disabled data-selected="false" data-type="Steel"></button><button type="button" class="type type__tera-symbol" title="Fairy" disabled data-selected="false" data-type="Fairy"></button></div></div>
 									
 									<div class="row"><p>Select the Stars Count:</p>
 										<div class="raid-card__stars"><button type="button" class="all-stars d-xxl-inline-block d-xl-inline-block" data-star="0" data-selected="true" data-last-selected="true">All</button>
@@ -267,7 +273,7 @@
 												</button></div></div>
 									</div>
 								<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-center align-items-center">
-									<div class="raid-card__pokemon svelte-8of23o"><p class="error" style="position: absolute; top: 48%;"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></p></div></div></div>
+									<div class="raid-card__pokemon svelte-cvz6t5"><p class="error" style="position: absolute; top: 48%;"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></p></div></div></div>
 							<div class="raid-card-background-1"></div></div></div></div></div>
 
 			
@@ -308,14 +314,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1jhd11x">
-			import { start } from "./_app/immutable/start-b9901583.js";
+		<script type="module" data-sveltekit-hydrate="1vlku2o">
+			import { start } from "./_app/immutable/start-223ca8bd.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1jhd11x"]').parentNode,
-				version: "1673617401220",
+				target: document.querySelector('[data-sveltekit-hydrate="1vlku2o"]').parentNode,
+				version: "1673803023300",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
