--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -26,6 +26,12 @@
 			 tera type icons, tera type symbols, tera type icon finder, terra, pokemon tera type icons, Pokemon Scarlet, Pokemon Violet, Karmesin, Purpur, good pokemon, tera type guide, Electric, Grass, Ground, Fire, Ice, Water, Rock, Normal, Flying, Bug, Ghost, Fighting,
 			 Dragon, Psychic, Fairy, Steel, Poison, Dark"
 		/>
+		<meta property="og:title" content="Pokémon Raid Counter Calculator">
+		<meta property="og:site_name" content="Terastal - Pokémon Raid Counter Calculator">
+		<meta property="og:url" content="https://terastal.net">
+		<meta property="og:description" content="Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator.">
+		<meta property="og:type" content="website">
+		<meta property="og:image" content="/assets/preview.webp">
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta charset="UTF-8" />
@@ -36,19 +42,19 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-2a9f918d.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-b9901583.js">
+		<link rel="modulepreload" href="./_app/immutable/start-223ca8bd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-757cded9.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-e725d4b6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-9cd1ad4a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-a25972e1.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Pokémon Tera Type Counter Calculator - Terastal.net</title><!-- HEAD_svelte-1awvpqb_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Pokémon Tera Type Counter Calculator - Terastal.net</title><!-- HEAD_svelte-1awvpqb_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -85,28 +91,28 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-638 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-869 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
   <div class="pokemon-dropdown autocomplete-list hidden is-fullwidth svelte-75ckfb">
 
-      <div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/6.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Charizard<!-- HTML_TAG_END --></span>
-																		<div class="type type__symbol-autocomplete" data-type="Fire"></div>
+      <div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/460.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Abomasnow<!-- HTML_TAG_END --></span>
+																		<div class="type type__symbol-autocomplete" data-type="Grass"></div>
+																		<div class="type type__symbol-autocomplete" data-type="Ice"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/594.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Alomomola<!-- HTML_TAG_END --></span>
+																		<div class="type type__symbol-autocomplete" data-type="Water"></div>
+																		<div class="type type__symbol-autocomplete"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/334.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Altaria<!-- HTML_TAG_END --></span>
+																		<div class="type type__symbol-autocomplete" data-type="Dragon"></div>
 																		<div class="type type__symbol-autocomplete" data-type="Flying"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/25.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Pikachu<!-- HTML_TAG_END --></span>
-																		<div class="type type__symbol-autocomplete" data-type="Electric"></div>
-																		<div class="type type__symbol-autocomplete"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/26.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Raichu<!-- HTML_TAG_END --></span>
-																		<div class="type type__symbol-autocomplete" data-type="Electric"></div>
-																		<div class="type type__symbol-autocomplete"></div></div>
-          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/39.min.png');"></div>
-																		<span class="label"><!-- HTML_TAG_START -->Jigglypuff<!-- HTML_TAG_END --></span>
-																		<div class="type type__symbol-autocomplete" data-type="Fairy"></div>
-																		<div class="type type__symbol-autocomplete" data-type="Normal"></div></div>
+          </div><div class="autocomplete-list-item svelte-75ckfb"><div slot="item"><div class="pokemon pokemon__small" style="--pokemon-url: url('/assets/i/591.min.png');"></div>
+																		<span class="label"><!-- HTML_TAG_START -->Amoonguss<!-- HTML_TAG_END --></span>
+																		<div class="type type__symbol-autocomplete" data-type="Grass"></div>
+																		<div class="type type__symbol-autocomplete" data-type="Poison"></div></div>
           </div>
 
       
@@ -125,7 +131,10 @@
 													<th class="text-center">1×</th>
 													<th class="text-center">2×</th>
 													<th class="text-center">4×</th></tr>
-												<tr><td colspan="6" class="text-center error">&quot;Type 1&quot; not selected.</td></tr></tbody></table></div>
+												<tr><td colspan="6" class="text-center error">&quot;Type 1&quot; not selected.</td></tr></tbody></table>
+
+										<h4>Weaknesses with new Tera Type</h4>
+										<p class="error">No Tera Type selected. Please select a Tera Type.</p></div>
 									<div class="col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 "><h4>Best Tera Type Results</h4>
 										<p>The best Tera Types for your Pokemon are:</p>
 										<div class="d-flex justify-content-between align-items-center bg-white"><table class="table table-bordered table-sm"><tbody><tr><th class="text-center">Score*</th>
@@ -143,14 +152,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1t12nel">
-			import { start } from "./_app/immutable/start-b9901583.js";
+		<script type="module" data-sveltekit-hydrate="17jzjz7">
+			import { start } from "./_app/immutable/start-223ca8bd.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1t12nel"]').parentNode,
-				version: "1673617401220",
+				target: document.querySelector('[data-sveltekit-hydrate="17jzjz7"]').parentNode,
+				version: "1673803023300",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
