--- a/type-table.html
+++ b/type-table.html
@@ -43,15 +43,16 @@
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-223ca8bd.js">
+		<link rel="modulepreload" href="./_app/immutable/start-fe072358.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-bdebb4ad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-acf8aece.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-db9949f5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-4435d131.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Pokémon Tera Type Table - Terastal.net</title><!-- HEAD_svelte-1hndsnr_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Pokémon Tera Type Table - Terastal.net</title><!-- HEAD_svelte-1hndsnr_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -71,12 +72,13 @@
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
-					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/type-table.html">Type Table</a></li></ul></div></div></nav></header>
+					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/type-table.html">Type Table</a></li>
+					<li class="nav-item"><a class="nav-link undefined" href="/explain-video.html">Explain Video</a></li></ul></div></div></nav></header>
 
 	<main>
 <div id="type-table" class="divider"></div>
 
-<div class="container py-3 tera-type-calcultator"><div class="row"><div class="col-12"><h2 class="jumbotron-heading">Type Table</h2>
+<div class="container py-3 type-table"><div class="row"><div class="col-12"><h2 class="jumbotron-heading">Type Table</h2>
 				<p class="lead s-nPv-U4yeUmII">Learn and know the new symbols.</p>
 				<table class="table table-bordered table-sm type-table"><tbody><tr><th><small class="d-block d-sm-none">Old</small>
 								<span class="d-none d-sm-block d-lg-block ">Old Symbol</span></th>
@@ -167,16 +169,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="ug3zbt">
-			import { start } from "./_app/immutable/start-223ca8bd.js";
+		<script type="module" data-sveltekit-hydrate="29u6l5">
+			import { start } from "./_app/immutable/start-fe072358.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="ug3zbt"]').parentNode,
-				version: "1673803023300",
+				target: document.querySelector('[data-sveltekit-hydrate="29u6l5"]').parentNode,
+				version: "1673990417236",
 				hydrate: {
-					node_ids: [0, 4],
+					node_ids: [0, 5],
 					data: [null,null],
 					form: null
 				}
