--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
 		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-19ae1971.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-223ca8bd.js">
+		<link rel="modulepreload" href="./_app/immutable/start-fe072358.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-bdebb4ad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-5864b890.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-a25972e1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-6ad53190.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-9719e596.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-4435d131.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Best Pokemon for Tera Raids - Tera Raid Counter Calculator - Terastal.net</title><!-- HEAD_svelte-1hfgv1q_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -74,7 +75,8 @@
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li></ul></div></div></nav></header>
+					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
+					<li class="nav-item"><a class="nav-link undefined" href="/explain-video.html">Explain Video</a></li></ul></div></div></nav></header>
 
 	<main>
 
@@ -85,7 +87,7 @@
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 									<form class="pokemon-search-form svelte-cvz6t5"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button></div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-428 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-31 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -314,14 +316,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1vlku2o">
-			import { start } from "./_app/immutable/start-223ca8bd.js";
+		<script type="module" data-sveltekit-hydrate="16hv24l">
+			import { start } from "./_app/immutable/start-fe072358.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1vlku2o"]').parentNode,
-				version: "1673803023300",
+				target: document.querySelector('[data-sveltekit-hydrate="16hv24l"]').parentNode,
+				version: "1673990417236",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
