--- a/tera-type-calculator.html
+++ b/tera-type-calculator.html
@@ -45,14 +45,15 @@
 		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-f92fbb69.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-223ca8bd.js">
+		<link rel="modulepreload" href="./_app/immutable/start-fe072358.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a4ec7c68.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-bdebb4ad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-e725d4b6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/GA-122f2b64.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-a25972e1.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-f4c0c4e0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-9719e596.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-4435d131.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Pokémon Tera Type Counter Calculator - Terastal.net</title><!-- HEAD_svelte-1awvpqb_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
@@ -74,7 +75,8 @@
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li></ul></div></div></nav></header>
+					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
+					<li class="nav-item"><a class="nav-link undefined" href="/explain-video.html">Explain Video</a></li></ul></div></div></nav></header>
 
 	<main>
 <div id="tera-type-calcultator" class="divider"></div>
@@ -91,7 +93,7 @@
 															<div class="col-12 sm-12 col-lg-10 px-0" data-selected="false"><button name="type2" type="button" title="Normal" data-type="Normal" data-selected="false"  class="type type__symbol-big" value="Normal"></button><button name="type2" type="button" title="Fire" data-type="Fire" data-selected="false"  class="type type__symbol-big" value="Fire"></button><button name="type2" type="button" title="Water" data-type="Water" data-selected="false"  class="type type__symbol-big" value="Water"></button><button name="type2" type="button" title="Electric" data-type="Electric" data-selected="false"  class="type type__symbol-big" value="Electric"></button><button name="type2" type="button" title="Grass" data-type="Grass" data-selected="false"  class="type type__symbol-big" value="Grass"></button><button name="type2" type="button" title="Ice" data-type="Ice" data-selected="false"  class="type type__symbol-big" value="Ice"></button><button name="type2" type="button" title="Fighting" data-type="Fighting" data-selected="false"  class="type type__symbol-big" value="Fighting"></button><button name="type2" type="button" title="Poison" data-type="Poison" data-selected="false"  class="type type__symbol-big" value="Poison"></button><button name="type2" type="button" title="Ground" data-type="Ground" data-selected="false"  class="type type__symbol-big" value="Ground"></button><button name="type2" type="button" title="Flying" data-type="Flying" data-selected="false"  class="type type__symbol-big" value="Flying"></button><button name="type2" type="button" title="Psychic" data-type="Psychic" data-selected="false"  class="type type__symbol-big" value="Psychic"></button><button name="type2" type="button" title="Bug" data-type="Bug" data-selected="false"  class="type type__symbol-big" value="Bug"></button><button name="type2" type="button" title="Rock" data-type="Rock" data-selected="false"  class="type type__symbol-big" value="Rock"></button><button name="type2" type="button" title="Ghost" data-type="Ghost" data-selected="false"  class="type type__symbol-big" value="Ghost"></button><button name="type2" type="button" title="Dragon" data-type="Dragon" data-selected="false"  class="type type__symbol-big" value="Dragon"></button><button name="type2" type="button" title="Dark" data-type="Dark" data-selected="false"  class="type type__symbol-big" value="Dark"></button><button name="type2" type="button" title="Steel" data-type="Steel" data-selected="false"  class="type type__symbol-big" value="Steel"></button><button name="type2" type="button" title="Fairy" data-type="Fairy" data-selected="false"  class="type type__symbol-big" value="Fairy"></button><button type="button" title="Reset Type 2" class="reset">Reset</button></div>
 															<div class="col-12 sm-12 col-lg-2 px-0"><div class="selected-type"></div></div>
 															<div class="col-12 sm-12 col-lg-12 px-0 pt-3">Or select your lovely Pokémon</div>
-															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-869 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+															<div class="col-12 px-0"><form class="pokemon-search-form"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-722 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -152,16 +154,16 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="17jzjz7">
-			import { start } from "./_app/immutable/start-223ca8bd.js";
+		<script type="module" data-sveltekit-hydrate="177hvq2">
+			import { start } from "./_app/immutable/start-fe072358.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="17jzjz7"]').parentNode,
-				version: "1673803023300",
+				target: document.querySelector('[data-sveltekit-hydrate="177hvq2"]').parentNode,
+				version: "1673990417236",
 				hydrate: {
-					node_ids: [0, 3],
+					node_ids: [0, 4],
 					data: [null,null],
 					form: null
 				}
