--- a/type-table.html
+++ b/type-table.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="icon" href="./logo-32.min.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Terastal - Best Pokemon for Tera Raids</title>
+		<title>Terastal Calculator - Best Pokemon for Tera Raids</title>
 		<meta name="title" content="Tera Type Calculator - Pokemon Scarlet & Violet" />
 		<meta
 			name="description"
@@ -11,7 +11,7 @@
 		/>
 		<meta
 			name="keywords"
-			content="Best Pokemon for Tera Raid, Tera Raid, Raid Events, Fairy, Ghost, Weakness, Counter,
+			content="Best Pokemon for Tera Raid, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
 				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
@@ -42,23 +42,23 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-2e1377f4.js">
+		<link href="./_app/immutable/assets/_layout-3191e629.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-00c0c3c9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-bdebb4ad.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-f61bd7df.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/type-table.html/_page.svelte-c352d6fa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Pokémon Tera Type Table - Terastal.net</title><!-- HEAD_svelte-1hndsnr_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Tera Type Table</title><!-- HEAD_svelte-9fl3ui_START --><link rel="canonical" href="https://terastal.net/type-table.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'G-8L9PXM6PDZ');
-	</script><!-- HEAD_svelte-1hndsnr_END -->
+	</script><!-- HEAD_svelte-9fl3ui_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -73,7 +73,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
 					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/type-table.html">Type Table</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/explain-video.html">Explain Video</a></li></ul></div></div></nav></header>
+					<li class="nav-item"><a class="nav-link undefined" href="/howto-video.html">HowTo Video</a></li></ul></div></div></nav></header>
 
 	<main>
 <div id="type-table" class="divider"></div>
@@ -169,14 +169,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="29u6l5">
-			import { start } from "./_app/immutable/start-2e1377f4.js";
+		<script type="module" data-sveltekit-hydrate="19c8yyh">
+			import { start } from "./_app/immutable/start-00c0c3c9.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="29u6l5"]').parentNode,
-				version: "1673993202171",
+				target: document.querySelector('[data-sveltekit-hydrate="19c8yyh"]').parentNode,
+				version: "1674082229558",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
