--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="icon" href="./logo-32.min.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Terastal - Best Pokemon for Tera Raids</title>
+		<title>Terastal Calculator - Best Pokemon for Tera Raids</title>
 		<meta name="title" content="Tera Type Calculator - Pokemon Scarlet & Violet" />
 		<meta
 			name="description"
@@ -11,7 +11,7 @@
 		/>
 		<meta
 			name="keywords"
-			content="Best Pokemon for Tera Raid, Tera Raid, Raid Events, Fairy, Ghost, Weakness, Counter,
+			content="Best Pokemon for Tera Raid, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
 				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
@@ -42,26 +42,26 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-925d4e79.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-3191e629.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page-9474c43c.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-2e1377f4.js">
+		<link rel="modulepreload" href="./_app/immutable/start-00c0c3c9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-bdebb4ad.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-107d2ba1.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-1b27cbe6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-97976f9e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Best Pokemon for Tera Raids - Tera Raid Counter Calculator - Terastal.net</title><!-- HEAD_svelte-1hfgv1q_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-1hfgv1q_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 		gtag('config', 'G-8L9PXM6PDZ');
-	</script><!-- HEAD_svelte-1hfgv1q_END --><!-- HEAD_svelte-1sm8mpm_START --><!-- HEAD_svelte-1sm8mpm_END -->
+	</script><!-- HEAD_svelte-1hfgv1q_END --><!-- HEAD_svelte-x0forg_START --><!-- HEAD_svelte-x0forg_END -->
 	</head>
 
 	<body data-sveltekit-preload-data="hover">
@@ -76,7 +76,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/explain-video.html">Explain Video</a></li></ul></div></div></nav></header>
+					<li class="nav-item"><a class="nav-link undefined" href="/howto-video.html">HowTo Video</a></li></ul></div></div></nav></header>
 
 	<main>
 
@@ -86,8 +86,9 @@
 			<p class="lead">Find the best Counter for a Tera Raid.</p>
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
 									<form class="pokemon-search-form svelte-1w5g6g7"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
-												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button></div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-799 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
+												</div>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-394 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -316,14 +317,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="u9ir6k">
-			import { start } from "./_app/immutable/start-2e1377f4.js";
+		<script type="module" data-sveltekit-hydrate="hrp6qn">
+			import { start } from "./_app/immutable/start-00c0c3c9.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="u9ir6k"]').parentNode,
-				version: "1673993202171",
+				target: document.querySelector('[data-sveltekit-hydrate="hrp6qn"]').parentNode,
+				version: "1674082229558",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
