--- a/howto-video.html
+++ b/howto-video.html
@@ -7,11 +7,12 @@
 		<meta name="title" content="Tera Type Calculator - Pokemon Scarlet & Violet" />
 		<meta
 			name="description"
-			content="Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
+			content="Terastal. Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
 		/>
 		<meta
 			name="keywords"
-			content="Best Pokemon for Tera Raid, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
+			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
+			Tera Type Calculator,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
 				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
@@ -51,7 +52,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/howto-video.html/_page.svelte-9bc2fbb4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/howto-video.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -93,7 +94,7 @@
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1qsehua"]').parentNode,
-				version: "1674082229558",
+				version: "1674082395563",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
