--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 		<meta name="title" content="Tera Type Calculator - Pokemon Scarlet & Violet" />
 		<meta
 			name="description"
-			content="Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
+			content="Terastal. Best Pokemon for Tera Raids. Tera Raid Counter Calculator. Tera Type Calculator. Type Table. Terastallize Counter Calculator."
 		/>
 		<meta
 			name="keywords"
-			content="Best Pokemon for Tera Raid, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
+			content="Best Pokemon for Tera Raid, Terastal, Terastal.net, Tera Raid, Raid Events, 6 Star Raid, 7 Star Raid, Greninja , Poison, Fairy, Ghost, Weakness, Counter,
+			Tera Type Calculator,
 				Annihilape,Amoonguss,Gengar,Cinderace,Garchomp,Dragonite,Gardevoir,
 				Kingambit,Corviknight,Dragapult,Dondozo,Goodra,Umbreon,Gyarados,Charizard,Vaporeon,Clodsire,
 				Ditto,Hydreigon,Haxorus,Breloom,Slowking,Tinkaton,Avalugg,Volcarona,Ceruledge,Armarouge,
@@ -55,7 +56,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-1hfgv1q_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-1hfgv1q_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -88,7 +89,7 @@
 									<form class="pokemon-search-form svelte-1w5g6g7"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
 												</div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-394 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-915 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -317,14 +318,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="hrp6qn">
+		<script type="module" data-sveltekit-hydrate="j4rccc">
 			import { start } from "./_app/immutable/start-00c0c3c9.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="hrp6qn"]').parentNode,
-				version: "1674082229558",
+				target: document.querySelector('[data-sveltekit-hydrate="j4rccc"]').parentNode,
+				version: "1674082395563",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
