feat: add abilities

--- a/howto-video.html
+++ b/howto-video.html
@@ -43,8 +43,8 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-3191e629.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-af833485.js">
+		<link href="./_app/immutable/assets/_layout-b4cdf557.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-6571803d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
@@ -52,7 +52,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/howto-video.html/_page.svelte-9bc2fbb4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/howto-video.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -88,13 +88,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="1qsehua">
-			import { start } from "./_app/immutable/start-af833485.js";
+			import { start } from "./_app/immutable/start-6571803d.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="1qsehua"]').parentNode,
-				version: "1674195084929",
+				version: "1674414453768",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
@@ -104,7 +104,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
-		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -112,6 +112,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script>
+		</script> -->
 	</body>
 </html>
