--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-3191e629.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page-9474c43c.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-b4cdf557.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_page-42c95c88.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/sendEvent-30abcd50.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-af833485.js">
+		<link rel="modulepreload" href="./_app/immutable/start-6571803d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-759b1ad4.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-1e302917.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-d8bb0535.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-fc2c274f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/sendEvent-a801d7b7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_page.ts-dc85b7cd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-1hfgv1q_START -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-da46b06b.js"><title>Terastal Calculator - Best Pokemon for Tera Raids</title><!-- HEAD_svelte-1hfgv1q_START -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -86,10 +86,10 @@
 <div class="container py-3 raid-counter"><div class="row px-0"><div class="col-12"><h2 class="jumbotron-heading">Tera Raid Counter</h2>
 			<p class="lead">Find the best Counter for a Tera Raid.</p>
 			<div class="row px-0"><div class="col-12 px-0"><div class="raid-card"><div class="raid-card-inner"><div class="row position-relative px-0 py-0"><div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-									<form class="pokemon-search-form svelte-1w5g6g7"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
+									<form class="pokemon-search-form svelte-kpom84"><div class="row"><div class="col-12 px-0" data-selected="0"><small>Filter search by type</small><br>
 												<button type="button" title="Normal" data-type="Normal" data-selected="false" class="type type__symbol-small" value="Normal"></button><button type="button" title="Fire" data-type="Fire" data-selected="false" class="type type__symbol-small" value="Fire"></button><button type="button" title="Water" data-type="Water" data-selected="false" class="type type__symbol-small" value="Water"></button><button type="button" title="Electric" data-type="Electric" data-selected="false" class="type type__symbol-small" value="Electric"></button><button type="button" title="Grass" data-type="Grass" data-selected="false" class="type type__symbol-small" value="Grass"></button><button type="button" title="Ice" data-type="Ice" data-selected="false" class="type type__symbol-small" value="Ice"></button><button type="button" title="Fighting" data-type="Fighting" data-selected="false" class="type type__symbol-small" value="Fighting"></button><button type="button" title="Poison" data-type="Poison" data-selected="false" class="type type__symbol-small" value="Poison"></button><button type="button" title="Ground" data-type="Ground" data-selected="false" class="type type__symbol-small" value="Ground"></button><button type="button" title="Flying" data-type="Flying" data-selected="false" class="type type__symbol-small" value="Flying"></button><button type="button" title="Psychic" data-type="Psychic" data-selected="false" class="type type__symbol-small" value="Psychic"></button><button type="button" title="Bug" data-type="Bug" data-selected="false" class="type type__symbol-small" value="Bug"></button><button type="button" title="Rock" data-type="Rock" data-selected="false" class="type type__symbol-small" value="Rock"></button><button type="button" title="Ghost" data-type="Ghost" data-selected="false" class="type type__symbol-small" value="Ghost"></button><button type="button" title="Dragon" data-type="Dragon" data-selected="false" class="type type__symbol-small" value="Dragon"></button><button type="button" title="Dark" data-type="Dark" data-selected="false" class="type type__symbol-small" value="Dark"></button><button type="button" title="Steel" data-type="Steel" data-selected="false" class="type type__symbol-small" value="Steel"></button><button type="button" title="Fairy" data-type="Fairy" data-selected="false" class="type type__symbol-small" value="Fairy"></button><button type="button" title="Reset Type Filter" class="reset-small">Reset</button>
 												</div>
-											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-243 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
+											<div class="col-12 px-0"><div class="pokemon-input autocomplete select is-fullwidth sautocomplete-825 svelte-75ckfb   show-clear"><select  class="svelte-75ckfb"></select>
   <div class="input-container svelte-75ckfb">
     <input type="text" class="form-control form-control-lg svelte-75ckfb" id="" autocomplete="off" placeholder="Search Pokémon..." title="Pokémon Search" tabindex="0">
     <span class="autocomplete-clear-button svelte-75ckfb"><!-- HTML_TAG_START -->&#10006;<!-- HTML_TAG_END --></span></div>
@@ -257,13 +257,13 @@
 														<div class="type type__symbol-autocomplete"></div></div>
           </div>
 
-      <div slot="dropdown-footer" class="autocomplete-list-item-no-results svelte-75ckfb">...380 Pokémons not shown.<br>Please use the text search or the type filter above to see more Pokémon.<br>Found a bug? Report it to: <a target="_blank" rel="noreferrer" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></div></div></div>
+      <div slot="dropdown-footer" class="autocomplete-list-item-no-results svelte-75ckfb">...383 Pokémons not shown.<br>Please use the text search or the type filter above to see more Pokémon.<br>Found a bug? Report it to: <a target="_blank" rel="noreferrer" href="https://www.reddit.com/user/Blitzlord">https://www.reddit.com/user/Blitzlord</a></div></div></div>
 
 </div></div></form>
 									
 									<div class="row">
 										<p>Select the Tera Type:</p>
-										<div class="raid-card__tera-type svelte-1w5g6g7"><button type="button" class="type type__tera-symbol" title="Normal" disabled data-selected="false" data-type="Normal"></button><button type="button" class="type type__tera-symbol" title="Fire" disabled data-selected="false" data-type="Fire"></button><button type="button" class="type type__tera-symbol" title="Water" disabled data-selected="false" data-type="Water"></button><button type="button" class="type type__tera-symbol" title="Electric" disabled data-selected="false" data-type="Electric"></button><button type="button" class="type type__tera-symbol" title="Grass" disabled data-selected="false" data-type="Grass"></button><button type="button" class="type type__tera-symbol" title="Ice" disabled data-selected="false" data-type="Ice"></button><button type="button" class="type type__tera-symbol" title="Fighting" disabled data-selected="false" data-type="Fighting"></button><button type="button" class="type type__tera-symbol" title="Poison" disabled data-selected="false" data-type="Poison"></button><button type="button" class="type type__tera-symbol" title="Ground" disabled data-selected="false" data-type="Ground"></button><button type="button" class="type type__tera-symbol" title="Flying" disabled data-selected="false" data-type="Flying"></button><button type="button" class="type type__tera-symbol" title="Psychic" disabled data-selected="false" data-type="Psychic"></button><button type="button" class="type type__tera-symbol" title="Bug" disabled data-selected="false" data-type="Bug"></button><button type="button" class="type type__tera-symbol" title="Rock" disabled data-selected="false" data-type="Rock"></button><button type="button" class="type type__tera-symbol" title="Ghost" disabled data-selected="false" data-type="Ghost"></button><button type="button" class="type type__tera-symbol" title="Dragon" disabled data-selected="false" data-type="Dragon"></button><button type="button" class="type type__tera-symbol" title="Dark" disabled data-selected="false" data-type="Dark"></button><button type="button" class="type type__tera-symbol" title="Steel" disabled data-selected="false" data-type="Steel"></button><button type="button" class="type type__tera-symbol" title="Fairy" disabled data-selected="false" data-type="Fairy"></button></div></div>
+										<div class="raid-card__tera-type svelte-kpom84"><button type="button" class="type type__tera-symbol" title="Normal" disabled data-selected="false" data-type="Normal"></button><button type="button" class="type type__tera-symbol" title="Fire" disabled data-selected="false" data-type="Fire"></button><button type="button" class="type type__tera-symbol" title="Water" disabled data-selected="false" data-type="Water"></button><button type="button" class="type type__tera-symbol" title="Electric" disabled data-selected="false" data-type="Electric"></button><button type="button" class="type type__tera-symbol" title="Grass" disabled data-selected="false" data-type="Grass"></button><button type="button" class="type type__tera-symbol" title="Ice" disabled data-selected="false" data-type="Ice"></button><button type="button" class="type type__tera-symbol" title="Fighting" disabled data-selected="false" data-type="Fighting"></button><button type="button" class="type type__tera-symbol" title="Poison" disabled data-selected="false" data-type="Poison"></button><button type="button" class="type type__tera-symbol" title="Ground" disabled data-selected="false" data-type="Ground"></button><button type="button" class="type type__tera-symbol" title="Flying" disabled data-selected="false" data-type="Flying"></button><button type="button" class="type type__tera-symbol" title="Psychic" disabled data-selected="false" data-type="Psychic"></button><button type="button" class="type type__tera-symbol" title="Bug" disabled data-selected="false" data-type="Bug"></button><button type="button" class="type type__tera-symbol" title="Rock" disabled data-selected="false" data-type="Rock"></button><button type="button" class="type type__tera-symbol" title="Ghost" disabled data-selected="false" data-type="Ghost"></button><button type="button" class="type type__tera-symbol" title="Dragon" disabled data-selected="false" data-type="Dragon"></button><button type="button" class="type type__tera-symbol" title="Dark" disabled data-selected="false" data-type="Dark"></button><button type="button" class="type type__tera-symbol" title="Steel" disabled data-selected="false" data-type="Steel"></button><button type="button" class="type type__tera-symbol" title="Fairy" disabled data-selected="false" data-type="Fairy"></button></div></div>
 									
 									<div class="row"><p>Select the Stars Count:</p>
 										<div class="raid-card__stars"><button type="button" class="all-stars d-xxl-inline-block d-xl-inline-block" data-star="0" data-selected="true" data-last-selected="true">All</button>
@@ -277,7 +277,7 @@
 												</button></div></div>
 									</div>
 								<div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex justify-content-center align-items-center">
-									<div class="raid-card__pokemon svelte-1w5g6g7"><p class="error" style="position: absolute; top: 48%;"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></p></div></div></div>
+									<div class="raid-card__pokemon svelte-kpom84"><p class="error" style="position: absolute; top: 48%;"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></p></div></div></div>
 							<div class="raid-card-background-1"></div></div></div></div></div>
 
 			
@@ -291,7 +291,15 @@
 							<table class="table table-bordered table-sm table-striped"><thead><td colspan="9" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></thead>
 								<tbody></tbody></table></div></div>
 
-				<div class="col-12 col-lg-7"><div class="row"><h4 class="jumbotron-heading">Best Counter Types</h4>
+				<div class="col-12 col-lg-7"><div class="row"><h4 class="jumbotron-heading">Best Abilities (Beta)</h4>
+						<table class="table table-bordered table-sm table-striped"><thead><tr><th>Ability</th>
+									<th>Description</th>
+									<th>Good against</th>
+									<th>Score</th></tr></thead>
+							<tbody><tr><td colspan="4" class="error"><!-- HTML_TAG_START -->Please select a Pokémon.<!-- HTML_TAG_END --></td></tr></tbody></table></div>
+
+
+					<div class="row"><h4 class="jumbotron-heading">Best Counter Types</h4>
 						<table class="table table-bordered table-sm table-striped"><thead><tr><th>Type</th>
 									<th><small class="d-block d-sm-none ">RESI</small>
 										<span class="d-none d-sm-block d-lg-block ">Resistances</span></th>
@@ -318,14 +326,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="sv5yac">
-			import { start } from "./_app/immutable/start-af833485.js";
+		<script type="module" data-sveltekit-hydrate="1f9zvwi">
+			import { start } from "./_app/immutable/start-6571803d.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="sv5yac"]').parentNode,
-				version: "1674195084929",
+				target: document.querySelector('[data-sveltekit-hydrate="1f9zvwi"]').parentNode,
+				version: "1674414453768",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
@@ -335,7 +343,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
-		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -343,6 +351,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script>
+		</script> -->
 	</body>
 </html>
