--- a/howto-video.html
+++ b/howto-video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" tera-theme="light">
 	<head>
 		<link rel="icon" href="./logo-32.min.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -43,8 +43,8 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-b4cdf557.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-6571803d.js">
+		<link href="./_app/immutable/assets/_layout-93601371.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-336878a9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
@@ -52,7 +52,7 @@
 		<link rel="modulepreload" href="./_app/immutable/components/pages/howto-video.html/_page.svelte-9bc2fbb4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/howto-video.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-e94d8ac7.js"><title>Terasta - HowTo Video - TikTok</title><!-- HEAD_svelte-jzjgdx_START --><link rel="canonical" href="https://terastal.net/howto-video.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -73,7 +73,9 @@
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/type-table.html">Type Table</a></li>
-					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/howto-video.html">HowTo Video</a></li></ul></div></div></nav></header>
+					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/howto-video.html">HowTo Video</a></li></ul></div>
+			
+			</div></nav></header>
 
 	<main>
 <div id="howto-video" class="divider"></div>
@@ -87,14 +89,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1qsehua">
-			import { start } from "./_app/immutable/start-6571803d.js";
+		<script type="module" data-sveltekit-hydrate="pbeyxe">
+			import { start } from "./_app/immutable/start-336878a9.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1qsehua"]').parentNode,
-				version: "1674414453768",
+				target: document.querySelector('[data-sveltekit-hydrate="pbeyxe"]').parentNode,
+				version: "1674807924588",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
