--- a/type-table.html
+++ b/type-table.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" tera-theme="light">
 	<head>
 		<link rel="icon" href="./logo-32.min.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -43,8 +43,8 @@
 		<link rel="canonical" href="https://terastal.net/" />
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-b4cdf557.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-6571803d.js">
+		<link href="./_app/immutable/assets/_layout-93601371.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-336878a9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
@@ -53,7 +53,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/interfaces-64f496f9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-e96febe3.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_page-fca24c55.js"><title>Terastal Calculator - Tera Type Table</title><!-- HEAD_svelte-9fl3ui_START --><link rel="canonical" href="https://terastal.net/type-table.html">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_page-90a7f2f4.js"><title>Terastal Calculator - Tera Type Table</title><!-- HEAD_svelte-9fl3ui_START --><link rel="canonical" href="https://terastal.net/type-table.html">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8L9PXM6PDZ"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -74,7 +74,9 @@
 			<div class="collapse navbar-collapse" id="navbarNav"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link undefined" href="/">Raid Counter</a></li>
 					<li class="nav-item"><a class="nav-link undefined" href="/tera-type-calculator.html">Tera Type Calculator</a></li>
 					<li class="nav-item"><a class="nav-link active" aria-current="page" href="/type-table.html">Type Table</a></li>
-					<li class="nav-item"><a class="nav-link undefined" href="/howto-video.html">HowTo Video</a></li></ul></div></div></nav></header>
+					<li class="nav-item"><a class="nav-link undefined" href="/howto-video.html">HowTo Video</a></li></ul></div>
+			
+			</div></nav></header>
 
 	<main>
 <div id="type-table" class="divider"></div>
@@ -170,14 +172,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="19c8yyh">
-			import { start } from "./_app/immutable/start-6571803d.js";
+		<script type="module" data-sveltekit-hydrate="j3fhbt">
+			import { start } from "./_app/immutable/start-336878a9.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="19c8yyh"]').parentNode,
-				version: "1674414453768",
+				target: document.querySelector('[data-sveltekit-hydrate="j3fhbt"]').parentNode,
+				version: "1674807924588",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
