--- a/howto-video.html
+++ b/howto-video.html
@@ -44,7 +44,7 @@
 		<link href="/assets/bootstrap.css" rel="stylesheet" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-93601371.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-f5de44d4.js">
+		<link rel="modulepreload" href="./_app/immutable/start-336878a9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6c4a4d91.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-83ddacde.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a6024bcf.js">
@@ -90,13 +90,13 @@
 
 
 		<script type="module" data-sveltekit-hydrate="pbeyxe">
-			import { start } from "./_app/immutable/start-f5de44d4.js";
+			import { start } from "./_app/immutable/start-336878a9.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
 				target: document.querySelector('[data-sveltekit-hydrate="pbeyxe"]').parentNode,
-				version: "1674926548719",
+				version: "1675372808021",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
@@ -106,7 +106,7 @@
 		</script>
 	</div>
 		<script src="/assets/collapse.js"></script>
-		<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+		<!-- <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 		<script>
 			kofiWidgetOverlay.draw('terastal', {
 				'type': 'floating-chat',
@@ -114,6 +114,6 @@
 				'floating-chat.donateButton.background-color': '#fcbf47',
 				'floating-chat.donateButton.text-color': '#323842'
 			});
-		</script>
+		</script> -->
 	</body>
 </html>
