--- a/stage/privacy-policy.html
+++ b/stage/privacy-policy.html
@@ -51,10 +51,10 @@
 
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-2b334758.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-918d44e2.js">
+		<link rel="modulepreload" href="./_app/immutable/start-7d9b2acd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-7126a34b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c091dfce.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-ab52a85c.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-755eee42.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-282def3e.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/privacy-policy.html/_page.svelte-8e6f148e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/GA-d336c68f.js">
@@ -84,7 +84,10 @@
 						<button class="type type__button" data-type="Dark" style="margin-right: 10px;"><span>Dark Mode</span></button></li>
 					<li class="nav-item">
 						<button class="type type__button" data-type="Electric"><span>Light Mode</span></button></li></ul></div></div></nav></header>
-	<main><div id="nn_lb2"></div>
+	<main>
+		<div id="nn_lb2"></div>
+		
+		<div id="nn_mobile_lb1"></div>
 		
 <div id="privacy-policy" class="divider"></div>
 <div class="container py-3 "><h3>Privacy policy</h3>
@@ -208,14 +211,14 @@
 </div>
 
 
-		<script type="module" data-sveltekit-hydrate="1s093ip">
-			import { start } from "./_app/immutable/start-918d44e2.js";
+		<script type="module" data-sveltekit-hydrate="1efynsr">
+			import { start } from "./_app/immutable/start-7d9b2acd.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1s093ip"]').parentNode,
-				version: "1675277735091",
+				target: document.querySelector('[data-sveltekit-hydrate="1efynsr"]').parentNode,
+				version: "1675373379875",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
